# Biliardo

./: .gitignore  CMakeLists.txt  compile.py
src/: biliardo.cpp  biliardo.hpp  main.cpp
